--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=IIT Banking System
+# PostgreSQL Database Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking_db
+spring.datasource.username=banking_user
+spring.datasource.password=lucifer1@
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate Settings (Auto Table Creation)
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
