--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,17 @@
     <artifactId>spring-boot-starter-web</artifactId>
 </dependency>
 
+<!-- OpenAPI Documentation -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-common</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 
 	</dependencies>
 
