--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.3</version>
+		<version>3.2.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.iit.banking</groupId>
-	<artifactId>iit-banking-system</artifactId>
+	<groupId>com.iit</groupId>
+	<artifactId>banking</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>IIT Banking System</name>
-	<description>IITT Campus Banking Management System</description>
+	<description>IIT Campus Banking Management System</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -27,8 +27,29 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>23</java.version>
+		<java.version>21</java.version>
+		<javafx.version>21.0.1</javafx.version>
+		<javafx.sdk.path>${project.basedir}/javafx-sdk-21.0.1</javafx.sdk.path>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>https://repo.maven.apache.org/maven2</url>
+		</repository>
+		<repository>
+			<id>gluon-releases</id>
+			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
+		</repository>
+		<repository>
+			<id>sonatype</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<!-- Spring Boot Starters -->
 		<dependency>
@@ -118,6 +139,57 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+		<!-- JavaFX Dependencies -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.controls.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.fxml.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.web.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-charts</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.graphics.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-media</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.media.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-swing</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.swing.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>${javafx.version}</version>
+			<scope>system</scope>
+			<systemPath>${javafx.sdk.path}/lib/javafx.base.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -125,11 +197,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
 				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -144,6 +220,14 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.8</version>
+				<configuration>
+					<mainClass>com.iit.banking.ui.BankingApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
