--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate Settings (Auto Table Creation)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create
+
 
 # SQL Initialization
 spring.sql.init.mode=always
