--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=IIT Banking System
 # PostgreSQL Database Connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/banking_db
-spring.datasource.username=banking_user
-spring.datasource.password=lucifer1@
+spring.datasource.url=jdbc:postgresql://localhost:5432/banking
+spring.datasource.username=dhruvpokhriyal
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate Settings (Auto Table Creation)
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # SQL Initialization
 spring.sql.init.mode=always
@@ -23,11 +22,11 @@ spring.sql.init.separator=;
 server.port=8080
 
 # Logging Configuration
-logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.com.iit.banking=DEBUG
 logging.level.web=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
 
 # Actuator Configuration
 management.endpoints.web.exposure.include=health,info
