--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,13 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<javafx.version>21.0.1</javafx.version>
-		<javafx.sdk.path>${project.basedir}/javafx-sdk-21.0.1</javafx.sdk.path>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<lombok.version>1.18.30</lombok.version>
+		<jjwt.version>0.12.5</jjwt.version>
+		<springdoc.version>2.3.0</springdoc.version>
 	</properties>
 
 	<repositories>
@@ -39,10 +42,6 @@
 			<id>central</id>
 			<name>Central Repository</name>
 			<url>https://repo.maven.apache.org/maven2</url>
-		</repository>
-		<repository>
-			<id>gluon-releases</id>
-			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
 		</repository>
 		<repository>
 			<id>sonatype</id>
@@ -88,6 +87,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
 			<optional>true</optional>
 		</dependency>
 
@@ -95,18 +95,18 @@
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-impl</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
-			<version>0.11.5</version>
+			<version>${jjwt.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 
@@ -114,12 +114,12 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.3.0</version>
+			<version>${springdoc.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-common</artifactId>
-			<version>2.3.0</version>
+			<version>${springdoc.version}</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
@@ -139,57 +139,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
-		<!-- JavaFX Dependencies -->
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-controls</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.controls.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.fxml.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-web</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.web.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-charts</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.graphics.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-media</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.media.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-swing</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.swing.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-base</artifactId>
-			<version>${javafx.version}</version>
-			<scope>system</scope>
-			<systemPath>${javafx.sdk.path}/lib/javafx.base.jar</systemPath>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -197,7 +146,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.12.1</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -220,14 +169,6 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.openjfx</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.8</version>
-				<configuration>
-					<mainClass>com.iit.banking.ui.BankingApplication</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
